# NanoTrack

./: README.md
ncnn_android_nanotrack/: build.gradle  settings.gradle
ncnn_android_nanotrack/app/: build.gradle
ncnn_android_nanotrack/app/src/main/: AndroidManifest.xml
ncnn_android_nanotrack/app/src/main/assets/: nanotrack_head_sim-opt.param
ncnn_android_nanotrack/app/src/main/cpp/: CMakeLists.txt  jni.cpp  nanotrack.cpp  nanotrack.h
ncnn_android_nanotrack/app/src/main/java/com/tencent/trackncnn/: GameView.java  MainActivity.java  NanoTrack.java
ncnn_android_nanotrack/app/src/main/res/layout/: main.xml
ncnn_android_nanotrack/app/src/main/res/values/: strings.xml
ncnn_android_nanotrack/gradle/wrapper/: gradle-wrapper.properties
ncnn_macos_nanotrack/: .gitignore  CMakeLists.txt  demo_ncnn.cpp  make_macos_arm64.sh  nanotrack.cpp  nanotrack.hpp
ncnn_macos_nanotrack/include/ncnn/: platform.h
ncnn_macos_nanotrack/model/ncnn/: nanotrack_backbone_sim-opt.param
